@@ -1,3 +1,6 @@
+05/08/09 (Olaf)
+Bug fix in the SemWebClLib: eliminated a concurrency issue in TaskQueueBase
+
 05/07/09 (Olaf)
 Minor performance improvement - implemented a custom determination of the size of a SWClGraphMem
 
